k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-product-03
  namespace: sabado
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-product-03
  template:
    metadata:
      labels:
        app: ms-product-03
    spec:
      imagePullSecrets:
        - name: acr-login
      containers:
      - name: ms-product-03
        image: registrysabado.azurecr.io/ms-producto:9-postgres
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 35
          periodSeconds: 10
        resources:
          limits:
            memory: "412Mi"
            cpu: "700m"
          requests:
            memory: "200Mi"
            cpu: "200m"
